[gd_scene load_steps=14 format=2]

[ext_resource path="res://Script/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu/screem.PNG" type="Texture" id=2]
[ext_resource path="res://assets/fonts/main_menu/Future TimeSplitters.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/main_menu/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Music/Game-Menu_Looping.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "entry"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.00784314, 0, 0, 1 ), Color( 0.0117647, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "transition"

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 4 )

[node name="Panel" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 994.729, 459.257 )
scale = Vector2( 2.13972, 2.01271 )
texture = ExtResource( 2 )

[node name="Margin" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 60
custom_constants/margin_left = 100
custom_constants/margin_bottom = 60

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
margin_left = 100.0
margin_top = 60.0
margin_right = 932.0
margin_bottom = 711.0

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer"]
margin_right = 832.0
margin_bottom = 651.0
custom_constants/separation = 130

[node name="Logo" type="Label" parent="Margin/HBoxContainer/VBoxContainer"]
margin_right = 832.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
text = "Jogo sem nome ainda NHAAAA"

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer/VBoxContainer"]
margin_top = 235.0
margin_right = 832.0
margin_bottom = 428.0
custom_constants/separation = 5

[node name="NewGame" type="Button" parent="Margin/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 832.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
text = "Novo Jogo"

[node name="Keys" type="Button" parent="Margin/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 832.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 3 )
text = "Mapa de teclas"

[node name="Exit" type="Button" parent="Margin/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 832.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 4 )
text = "Sair"

[node name="Version" type="Label" parent="Margin/HBoxContainer/VBoxContainer"]
margin_top = 558.0
margin_right = 832.0
margin_bottom = 651.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0196078, 0.341176, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
text = "Version 0.1
Ancap Studio"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/entry = SubResource( 6 )
anims/transition = SubResource( 7 )

[node name="MapKey" type="Panel" parent="."]
visible = false
margin_left = -31.0
margin_top = -57.0
margin_right = 1310.0
margin_bottom = 755.0

[node name="Keys" type="Label" parent="MapKey"]
margin_left = 252.923
margin_top = 201.576
margin_right = 1084.92
margin_bottom = 486.576
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0196078, 0.341176, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
text = "W - Mover para cima
S - Mover para baixo
A - Mover para esquerda
D - Mover para a direita
Espaço - Dash
Botão esquerdo do mouse - Atacar
esc - Pausar o jogo"

[node name="Return" type="Button" parent="MapKey"]
margin_left = 250.527
margin_top = 554.501
margin_right = 447.527
margin_bottom = 615.501
custom_fonts/font = SubResource( 8 )
text = "Retornar"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
[connection signal="focus_entered" from="Margin/HBoxContainer/VBoxContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_focus_entered"]
[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/VBoxContainer/Keys" to="." method="_on_Keys_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="MapKey/Return" to="." method="_on_Return_pressed"]
